:heavy_check_mark: Сборка #6

--- a/6/index.html
+++ b/6/index.html
@@ -12,7 +12,7 @@
     <header class="page-header">
       <div class="container">
         <h1 class="visually-hidden"> Интернет-магазин: Девайс</h1>
-        <nav>
+        <nav class="navigation-interface">
           <a class="logo-link" href="#">
             <img class="logo" src="images/logo.svg" width="145" height="36" alt="Логотип сайта Девайс.">
           </a>
@@ -174,8 +174,9 @@
               <a class="products-link" href="#">Виртуальная реальность</a>
             </li>
             <li class="products-item">
-              <span class="product-card monopod"></span>
-              <a class="products-link" href="#">Моноподы
+
+              <a class="products-link" href="catalog.html">
+                <span class="product-card monopod"></span>Моноподы
                 для селфи</a>
             </li>
             <li class="products-item">
@@ -240,9 +241,7 @@
       <section class="delivery-order">
         <div class="container">
           <h2 class="visually-hidden">Преимущество нашей доставки</h2>
-          <a class="delivery-order-text">Доставим редкий товар под заказ
-            <span class="visually-hidden">Информация</span>
-          </a>
+          <a class="delivery-order-text">Доставим редкий товар под заказ</a>
         </div>
       </section>
 
@@ -307,7 +306,6 @@
         <a class="footer-logo" href="#">
           <img src="images/footer-logo.svg" width="145" height="36" alt="Логотип магазина Девайс.">
         </a>
-        <h2 class="visually-hidden"> Адрес магазина Девайс</h2>
         <div class="footer-information-container">
           <div class="footer-adress-container">
             <p class="footer-adress">Санкт-Петербург, набережная<br>
@@ -325,7 +323,7 @@
             </li>
           </ul>
           <div class="footer-phone-container">
-            <a class="footer-adress footer-adress-tel" href="tel:+78128121212">+7 (812) 812-12-12</a>
+            <a class="footer-adress footer-adress-tel" href="tel:+78128121212">Тел.: +7 (812) 812-12-12</a>
           </div>
         </div>
         <div class="footer-social-container">
