добавляет декоративные элементы на главную

--- a/catalog.html
+++ b/catalog.html
@@ -10,7 +10,7 @@
   <body>
     <header class="page-header">
       <div class="container">
-        <h1 class="visually-hidden"> Страница каталога: Моноподы для селфи</h1>
+        <h2 class="visually-hidden"> Страница каталога: Моноподы для селфи</h2>
         <nav class="navigation-interface">
           <a class="logo-link" href="index.html">
             <img class="logo" src="images/logo.svg" width="145" height="36" alt="Логотип сайта Девайс.">
@@ -23,17 +23,17 @@
             </form>
             <ul class="user-interface-list-catalog">
               <li class="user-interface-item user-interface-catalog">
-                <a class="navigation-user-link" href="#">
+                <a class="navigation-user-link login-user-link" href="#">
                   Коля Петухов</a>
               </li>
               <li class="user-interface-item user-interface-catalog">
                 <a class="user-link user-link-exit">Выйти</a>
               </li>
               <li class="user-interface-item user-interface-catalog">
-                <a class="user-link catalog-user-link" href="#">Сравнить</a>
+                <a class="user-link comparison-link" href="#">Сравнить</a>
               </li>
               <li class="user-interface-item user-interface-catalog">
-                <a class="user-link interface-catalog-basket" href="#"> Корзина</a>
+                <a class="user-link basket-link" href="#"> Корзина</a>
                 <span class="goods-amount">2</span>
               </li>
             </ul>
