--- a/index.html
+++ b/index.html
@@ -25,12 +25,45 @@
               <li class="user-interface-item">
                 <a class="user-link login-link-enter" href="#">Войти</a>
               </li>
-              <li class="user-interface-item">
+              <li class="user-interface-item comparison-item">
                 <a class="user-link comparison-link" href="#">Сравнить</a>
               </li>
               <li class="user-interface-item">
-                <a class="user-link basket-link" href="#"> Корзина</a>
-                <span class="goods-amount">2</span>
+                <a class="user-link basket-link" href="#"> Корзина
+                  <span class="goods-amount">2</span>
+                </a>
+                <div class="popover popover-cart">
+                  <div class="popover-content">
+                    <h2 class="visually-hidden">Корзина</h2>
+                  </div>
+                  <ul class="popover-items">
+                    <li class="popover-list-items">
+                      <div class="container-goods-basket">
+                        <img class="popover-image" src="images/popover-items/pop-self-junior.png"
+                          alt="Любительская селфи-палка." width="39" height="43">
+                        <a class="popover-link" href="#">Любительская<br>селфи-палка</a>
+                      </div>
+                      <button class="close-button" type="button">
+                        <span class="visually-hidden">Закрыть.</span>
+                      </button>
+                    </li>
+                    <li class="popover-list-items popover-list">
+                      <div class="container-goods-basket">
+                        <img class="popover-image" src="images/popover-items/pop-self-stick-prof.png"
+                          alt="Профессиональная селфи-палка." width="39" height="43">
+                        <a class="popover-link" href="#">Профессиональная<br>селфи-палка</a>
+                      </div>
+                      <button class="close-button-second" type="button">
+                        <span class="visually-hidden">Закрыть.</span>
+                      </button>
+                    </li>
+                  </ul>
+                  <div class="total-goods container-goods">
+                    <p class="number-goods">Товаров: 2</p>
+                    <p class="price-goods">Сумма: 2000 ₽</p>
+                  </div>
+                  <button class="button-popover" type="button">Открыть корзину</button>
+                </div>
               </li>
             </ul>
           </div>
@@ -188,8 +221,6 @@
           </li>
         </ol>
       </section>
-
-
       <section class="products">
         <div class="container">
           <h2 class="visually-hidden">Категории товаров</h2>
@@ -201,7 +232,7 @@
             <li class="products-item">
 
               <a class="products-link" href="catalog.html">
-                <span class="product-card monopod"></span>Моноподы
+                <span class="product-card monopod"></span>Моноподы<br>
                 для селфи</a>
             </li>
             <li class="products-item">
@@ -229,14 +260,14 @@
           <h2 class="visually-hidden">Условия доставки, условия гарантий и кредитования</h2>
           <ul class="services-list">
             <li class="services-item">
-              <a class="services-link services-link-current" href="#">Доставка</a>
+              <a class="services-link services-link-current" href="#"><span
+                  class="services-item-current">Доставка</span></a>
             </li>
             <li class="services-item">
-              <a class="services-link" href="#">
-                <span>Гарантия</span></a>
+              <a class="services-link services-item-name services-item-rectangle" href="#"><span>Гарантия</span></a>
             </li>
             <li class="services-item">
-              <a class="services-link" href="#">Кредит</a>
+              <a class="services-link services-item-name" href="#"><span>Кредит</span></a>
             </li>
           </ul>
           <ul class="info">
@@ -302,7 +333,7 @@
           <a class="contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
           <h3 class="operating-time">Время работы</h3>
           <p class="operating-time-description">пн—пт: с 10:00 до 22:00 <br> сб—вс: с 10:00 до 19:00</p>
-          <a class="button" href="#">Напишите нам</a>
+          <a class="button button-write-us" href="#">Напишите нам</a>
         </section>
       </div>
 
@@ -405,7 +436,7 @@
             </div>
           </section>
           <div class="copyright">
-            <a href="https://htmlacademy.ru/">
+            <a class="htmlacademy-link" href="https://htmlacademy.ru/">
               <svg width="115" height="33" viewBox="0 0 115 33" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M0 12.9V15.5H2.5V12.9H0Z" fill="#FFC700" />
                 <path
