Декоративные элементы всех страниц (исправления)

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                 <a class="user-link basket-link" href="#"> Корзина
                   <span class="goods-amount">2</span>
                 </a>
+                <!--Для того, чтобы открыть popover корзины, нужно добавить второй класс popover-open-->
                 <div class="popover popover-cart">
                   <div class="popover-content">
                     <h2 class="visually-hidden">Корзина</h2>
@@ -84,6 +85,7 @@
                 </li>
               </ul>
             </div>
+            <!--Для того, чтобы показать данный список, нужно добавить для этого элемента второй класс submenu-container-open -->
             <div class="submenu-container">
               <ul class="catalog-navigation-items">
                 <li class="catalog-navigation-link">
@@ -226,30 +228,32 @@
           <h2 class="visually-hidden">Категории товаров</h2>
           <ul class="products-list">
             <li class="products-item">
-              <span class="product-card virtual-reality"></span>
-              <a class="products-link" href="#">Виртуальная реальность</a>
+              <a class="products-link" href="#">
+                <span class="product-card virtual-reality"></span>Виртуальная реальность
+              </a>
             </li>
             <li class="products-item">
-
               <a class="products-link" href="catalog.html">
                 <span class="product-card monopod"></span>Моноподы<br>
                 для селфи</a>
             </li>
             <li class="products-item">
-              <span class="product-card action-camera"></span>
-              <a class="products-link" href="#">Экшн-камеры</a>
+              <a class="products-link" href="#">
+                <span class="product-card action-camera"></span>Экшн-камеры
+              </a>
             </li>
             <li class="products-item">
-              <span class="product-card fitness-bracelet"></span>
-              <a class="products-link" href="#">Фитнес-браслеты</a>
+              <a class="products-link" href="#">
+                <span class="product-card fitness-bracelet"></span>Фитнес-браслеты
+              </a>
             </li>
             <li class="products-item">
-              <span class="product-card smart-watch"></span>
-              <a class="products-link" href="#">Умные часы</a>
+              <a class="products-link" href="#"><span class="product-card smart-watch"></span>Умные часы
+              </a>
             </li>
             <li class="products-item">
-              <span class="product-card quadcopter"></span>
-              <a class="products-link" href="#">Квадрокоптеры</a>
+              <a class="products-link" href="#"><span class="product-card quadcopter"></span>Квадрокоптеры
+              </a>
             </li>
           </ul>
         </div>
