--- a/catalog.html
+++ b/catalog.html
@@ -36,6 +36,39 @@
                 <a class="user-link basket-link" href="#"> Корзина
                   <span class="goods-amount">2</span>
                 </a>
+                <!--Для того, чтобы открыть popover корзины, нужно добавить второй класс popover-open-->
+                <div class="popover popover-cart">
+                  <div class="popover-content">
+                    <h2 class="visually-hidden">Корзина</h2>
+                  </div>
+                  <ul class="popover-items">
+                    <li class="popover-list-items">
+                      <div class="container-goods-basket">
+                        <img class="popover-image" src="images/popover-items/pop-self-junior.png"
+                          alt="Любительская селфи-палка." width="39" height="43">
+                        <a class="popover-link" href="#">Любительская<br>селфи-палка</a>
+                      </div>
+                      <button class="close-button" type="button">
+                        <span class="visually-hidden">Закрыть.</span>
+                      </button>
+                    </li>
+                    <li class="popover-list-items popover-list">
+                      <div class="container-goods-basket">
+                        <img class="popover-image" src="images/popover-items/pop-self-stick-prof.png"
+                          alt="Профессиональная селфи-палка." width="39" height="43">
+                        <a class="popover-link" href="#">Профессиональная<br>селфи-палка</a>
+                      </div>
+                      <button class="close-button-second" type="button">
+                        <span class="visually-hidden">Закрыть.</span>
+                      </button>
+                    </li>
+                  </ul>
+                  <div class="total-goods container-goods">
+                    <p class="number-goods">Товаров: 2</p>
+                    <p class="price-goods">Сумма: 2000 ₽</p>
+                  </div>
+                  <button class="button-popover" type="button">Открыть корзину</button>
+                </div>
               </li>
             </ul>
           </div>
@@ -168,18 +201,18 @@
                 <option value="cheap">Сначала дешевые</option>
               </select>
               <div class="catalog-filter-sort">
-                <a class="filter-sort filter-sort-up">
+                <button class="filter-sort filter-sort-up">
                   <span class="visually-hidden">Сортировка от меньшего к большему</span>
                   <svg width="12" height="10" viewBox="0 0 12 10" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M6 0L11.5 10H0.5" fill="#cccccc" />
                   </svg>
-                </a>
-                <a class="filter-sort filter-sort-down">
+                </button>
+                <button class="filter-sort filter-sort-down">
                   <span class="visually-hidden">Сортировка от большего к меньшему</span>
                   <svg width="12" height="10" viewBox="0 0 12 10" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M6 0L11.5 10H0.5" fill="#cccccc" />
                   </svg>
-                </a>
+                </button>
               </div>
             </div>
 
@@ -190,12 +223,12 @@
                   <a class="product-link-item" href="#">
                     <img src="images/catalog/junior-selfie-stick.jpg" width="360" height="380"
                       alt="Любительская селфи-палка.">
+                    <div class="goods-title-price">
+                      <h3 class="title-goods">Любительская<br>
+                        селфи-палка</h3>
+                      <span class="goods-price">500 ₽</span>
+                    </div>
                   </a>
-                  <div class="goods-title-price">
-                    <h3 class="title-goods">Любительская<br>
-                      селфи-палка</h3>
-                    <span class="goods-price">500 ₽</span>
-                  </div>
                   <div class="popup-cart-product">
                     <a class="popover-catalog-goods button-card-product" href="#">Подробнее</a>
                   </div>
@@ -204,11 +237,11 @@
                   <a class="product-link-item" href="#">
                     <img src="images/catalog/prof-selfie-stick.jpg" width="360" height="380"
                       alt="Профессиональная селфи-палка.">
+                    <div class="goods-title-price">
+                      <h3 class="title-goods">Профессиональная<br> селфи-палка</h3>
+                      <span class="goods-price">1 500 ₽</span>
+                    </div>
                   </a>
-                  <div class="goods-title-price">
-                    <h3 class="title-goods">Профессиональная<br> селфи-палка</h3>
-                    <span class="goods-price">1 500 ₽</span>
-                  </div>
                   <div class="popup-cart-product">
                     <a class="popover-catalog-goods button-card-product" href="#">Подробнее</a>
                   </div>
@@ -217,12 +250,12 @@
                   <a class="product-link-item" href="#">
                     <img src="images/catalog/ip68-selfie-stick.jpg" width="360" height="380"
                       alt="Непотопляемая селфи-палка.">
+                    <div class="goods-title-price">
+                      <h3 class="title-goods">Непотопляемая<br>
+                        селфи-палка</h3>
+                      <span class="goods-price">2 500 ₽</span>
+                    </div>
                   </a>
-                  <div class="goods-title-price">
-                    <h3 class="title-goods">Непотопляемая<br>
-                      селфи-палка</h3>
-                    <span class="goods-price">2 500 ₽</span>
-                  </div>
                   <div class="popup-cart-product">
                     <a class="popover-catalog-goods button-card-product" href="#">Подробнее</a>
                   </div>
@@ -231,11 +264,11 @@
                   <a class="product-link-item" href="#">
                     <img src="images/catalog/follow-me-selfie-stick.jpg" width="360" height="380"
                       alt="Селфи-палка «Следуй за мной».">
+                    <div class="goods-title-price">
+                      <h3 class="title-goods">Селфи-палка «Следуй за<br> мной»</h3>
+                      <span class="goods-price">1 500 ₽</span>
+                    </div>
                   </a>
-                  <div class="goods-title-price">
-                    <h3 class="title-goods">Селфи-палка «Следуй за<br> мной»</h3>
-                    <span class="goods-price">1 500 ₽</span>
-                  </div>
                   <div class="popup-cart-product">
                     <a class="popover-catalog-goods button-card-product" href="#">Подробнее</a>
                   </div>
