--- a/index.html
+++ b/index.html
@@ -328,6 +328,7 @@
           <a class="button  button-about-us" href="#">Подробнее о нас</a>
         </section>
 
+
         <section class="contacts-information">
           <h2 class="title about-us-title">Контакты</h2>
           <p class="contacts-text">Вы можете забрать товар сами, заехав в наш офис. <br>
@@ -483,6 +484,70 @@
         </div>
       </div>
     </footer>
+
+    <!--Чтобы открылось модальное окно нужно подставить класс modal-open-->
+    <div class="modal-delivery-container modal-container-close">
+      <section class="modal-delivery">
+        <button class="button-close" type="button">
+          <span class="visually-hidden">Закрыть.</span>
+        </button>
+        <h2 class="modal-title">Доставка под заказ</h2>
+        <form class="delivery-form" action="https://echo.htmlacademy.ru/" method="post">
+          <div class="user-info">
+            <div class="field-group">
+              <label class="form-name" for="input-name">Ваше имя:</label>
+              <input class="name-field" type="text" id="input-name" name="input-name" placeholder="Введите имя">
+              <span class="name-add-message">Добавьте имя</span>
+            </div>
+            <div class="field-group">
+              <label class="form-email" for="input-email">Ваш e-mail:</label>
+              <input class="email-field error-modal" type="email" id="input-email" name="input-email"
+                placeholder="почта">
+              <span class="error-message">Забавный у вас адрес</span>
+            </div>
+          </div>
+          <div class="delivery-info">
+            <div class="field-group">
+              <label class="form-delivery" for="input-delivery">Что нужно привезти</label>
+              <input class="delivery-text-field" type="text" id="input-delivery" name="input-delivery"
+                placeholder="В свободной форме" required>
+            </div>
+            <div class="tooltip-value-container">
+              <label class="form-value" for="input-value">Количество:</label>
+              <span class="tooltip">
+                <button class="tooltip-toggle" type="button" aria-labelledby="tooltip-label-date">
+                  <svg class="tooltip-icon" width="2" height="12" viewBox="0 0 2 12" fill="currentColor"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <g clip-path="url(#clip0_26119_30)">
+                      <path d="M2 0H0V2H2V0Z" />
+                      <path d="M2 4H0V12H2V4Z" />
+                    </g>
+                    <defs>
+                      <clipPath id="clip0_26119_30">
+                        <rect width="2" height="12" />
+                      </clipPath>
+                    </defs>
+                  </svg>
+                </button>
+                <span class="tooltip-text" role="tooltip" id="tooltip-label-date">Постараемся найти, сколько нужно.
+                  Привезём сколько получится по требованиям
+                  к провозу багажа.</span>
+              </span>
+              <div class="value-group">
+                <button class="value-button" type="button">
+                  <span class="visually-hidden">Уменьшить количество.</span>
+                </button>
+                <input class="form-value-field" type="text" id="input-value" name="input-value" placeholder="1">
+                <button class="value-button value-button-add" type="button">
+                  <span class="visually-hidden">Увеличить количество.</span>
+                </button>
+              </div>
+            </div>
+          </div>
+          <button class="button button-form" type="submit">Отправить</button>
+        </form>
+      </section>
+    </div>
   </body>
 
 </html>
