--- a/catalog.html
+++ b/catalog.html
@@ -5,18 +5,19 @@
     <meta charset="utf-8">
     <title>Каталог: Моноподы для селфи</title>
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">
   </head>
 
   <body>
     <header class="page-header">
-      <div class="container">
+      <div class="container container-catalog">
         <h2 class="visually-hidden"> Страница каталога: Моноподы для селфи</h2>
-        <nav class="navigation-interface">
+        <nav class="navigation-interface navigation-interface-catalog">
           <a class="logo-link" href="index.html">
             <img class="logo" src="images/logo.svg" width="145" height="36" alt="Логотип сайта Девайс.">
           </a>
           <div class="navigation-user">
-            <form class="search-form" action="#" method="post">
+            <form class="search-form" action="https://echo.htmlacademy.ru/" method="post">
               <label class="visually-hidden" for="search">Текст поиска</label>
               <input class="field-search field-catalog" type="search" id="search" placeholder="Текст поиска">
               <button class="search-button" type="submit">Найти</button>
@@ -297,7 +298,7 @@
                     <img src="images/catalog/follow-me-selfie-stick.jpg" width="360" height="380"
                       alt="Селфи-палка «Следуй за мной».">
                     <div class="goods-title-price">
-                      <h3 class="title-goods">Селфи-палка «Следуй за<br> мной»</h3>
+                      <h3 class="title-goods">Селфи-палка «Следуй<br> за мной»</h3>
                       <span class="goods-price">1 500 ₽</span>
                     </div>
                   </a>
