Защита личного проекта «Девайс»

--- a/catalog.html
+++ b/catalog.html
@@ -274,7 +274,7 @@
                   </div>
                 </li>
                 <li class="catalog-item">
-                  <a class="product-link-item" href="#">
+                  <a class="product-link-item product-link-item-new" href="#">
                     <img src="images/catalog/prof-selfie-stick.jpg" width="360" height="380"
                       alt="Профессиональная селфи-палка.">
                     <div class="goods-title-price">
